--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -27,5 +27,11 @@ jobs:
         run: git checkout test
       - name: Append data to newFile.txt
         run: echo "APPend me" >> newFile.txt
+      - name: Get github pusher name
+        run: |
+          echo "The name of the pusher: ${{ github.event.pusher.name }}"
+          echo "The email of the pusher: ${{ github.event.pusher.email }}"
+      - name: Set pusher identity
+        run: GIT_AUTHOR_EMAIL="${{ github.event.pusher.email }}" && GIT_AUTHOR_NAME="${{ github.event.pusher.name }}"
       - name: Git add, commit and push to test
         run: git add . && git commit -m "append to newFile.txt" && git push
