--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,6 +1,8 @@
 name: GitHub Actions Demo
-on: [pull_request, push]
-  branches: [ main ]
+on: 
+  pull_request:
+  push:
+    branches: [ main ]
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
